--- a/app/globals.css
+++ b/app/globals.css
@@ -4,5 +4,13 @@
 
 html,body, :root{
     height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    width: 100%;
+    overflow: hidden;
     box-sizing: border-box;
+}
+
+.h-withoutHeader{
+    height: calc(100vh - 64px);
 }
