--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,6 @@ html,body, :root{
 .h-withoutHeader{
     height: calc(100vh - 64px);
 }
+.select__menu{
+    background: rgb(75,85,99 ) !important;
+}
